@@ -1,3 +1,12 @@
+2003-03-18  J. Brobecker  <brobecker@gnat.com>
+
+	* observer.c (observer_test_first_observer): New static variable.
+	(observer_test_second_observer): Likewise.
+	(observer_test_third_observer): Likewise.
+	(observer_test_first_notification_function): New static function.
+	(observer_test_second_notification_function): Likewise.
+	(observer_test_third_notification_function): Likewise.
+
 2003-03-17  J. Brobecker  <brobecker@gnat.com>
 
 	* hppa-tdep.c (gdb_assert.h): Add missing #include.
